# OllamaMerger

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/ollama_merger/: __init__.py  __main__.py  cli.py
src/ollama_merger/core/: downloader.py  modelfile.py  ollama.py  parser.py
src/ollama_merger/web/: app.py
src/ollama_merger/web/templates/: base.html  create_result.html  index.html  push_result.html  result.html
tests/: test_cli.py  test_downloader.py  test_modelfile.py  test_ollama.py  test_parser.py  test_web.py
tests/fixtures/: config.json  generation_config.json  tokenizer_config.json
