[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-merger"
version = "0.1.0"
description = "Convert HuggingFace models to Ollama-ready format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Stefano Andreotti" },
]
keywords = ["ollama", "huggingface", "llm", "model-conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ollama-merger[cli,web]",
]

[project.scripts]
ollama-merger = "ollama_merger.cli:app"

[project.urls]
Homepage = "https://github.com/sAndreotti/OllamaMerger"
Repository = "https://github.com/sAndreotti/OllamaMerger"
Issues = "https://github.com/sAndreotti/OllamaMerger/issues"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
